First pass, working ok,  so far.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ categories = ["science"]
 keywords = ["weather","sounding","meteorology", "skew-t"]
 
 [dependencies]
+sounding-base = "^0.0.14"
 error-chain = "^0.11"
