Environment updates and cargo fmt.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-#
-# Rust/Cargo
-#
+//
+// cargo and rustc
+//
 /target/
 **/*.rs.bk
 Cargo.lock
+
+//
+// Sublime editor
+//
+*.sublime-workspace
+
+//
+// OS specific
+//
+.DS_Store
