--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sounding-validate"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Ryan Leach <clumsycodemonkey@gmail.com>"]
 description = """Validation of soundings from the sounding-base crate."""
 repository = "https://github.com/rnleach/sounding-validate.git"
@@ -11,5 +11,10 @@ categories = ["science"]
 keywords = ["weather","sounding","meteorology", "skew-t"]
 
 [dependencies]
-sounding-base = "^0.2.0"
-error-chain = "^0.11"
+sounding-base = "^0.3"
+failure = "0.1.1"
+failure_derive = "0.1.1"
+
+
+[patch.crates-io]
+sounding-base = {version="0.3", git = "https://github.com/rnleach/sounding-base.git" }
