--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sounding-validate"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["Ryan Leach <clumsycodemonkey@gmail.com>"]
 description = """Validation of soundings from the sounding-base crate."""
 repository = "https://github.com/rnleach/sounding-validate.git"
@@ -11,6 +11,11 @@ categories = ["science"]
 keywords = ["weather","sounding","meteorology", "skew-t"]
 
 [dependencies]
-sounding-base = "^0.6"
 failure = "0.1.1"
 failure_derive = "0.1.1"
+optional="0.4.1"
+sounding-base = "^0.7"
+
+[patch.crates-io]
+optional={git="https://github.com/rnleach/optional.git",branch="all_mods"}
+sounding-base={git="https://github.com/rnleach/sounding-base.git", branch="optional"}
