--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: rust
 cache: cargo
 
+os:
+  - linux
+  - osx
+  
 rust:
   - stable
-  - beta
-  - nightly
-matrix:
-  allow_failures:
-    - rust: nightly
 
 script:
      - cargo test --verbose
