--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ keywords = ["weather","sounding","meteorology", "skew-t"]
 edition="2018"
 
 [dependencies]
-
-optional="0.5.0"
-sounding-base = "^0.8.1"
+metfor = "0.5.0"
+optional = "0.5.0"
+sounding-base = "^0.9.1"
